objects/Condition__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>Activate_Later__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Later</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activation_End__c</fullName>
        <label>Activation End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Start__c</fullName>
        <label>Activation Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this condition is active and in a state when the condition occurrences can be generated.</description>
        <inlineHelpText>Indicates if this condition is active and in a state when the condition occurrences can be generated.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Percentage__c</fullName>
        <label>Actual Base Percentage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_From__c</fullName>
        <label>Actual Base Range From</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_To__c</fullName>
        <label>Actual Base Range To</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Ratio__c</fullName>
        <label>Actual Base Ratio</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base__c</fullName>
        <label>Actual Base</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Days__c</fullName>
        <formula>TEXT (Number_Of_Days__c)&amp; &quot; &quot; &amp; TEXT (Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <inlineHelpText>Received from Client</inlineHelpText>
        <label>Actual Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agreement</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select Agreements that are linked to the selected Deal</errorMessage>
            <filterItems>
                <field>$Source.Matter__c</field>
                <operation>equals</operation>
                <valueField>Agreement__c.Matter_Deal__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Group__c</fullName>
        <label>Assigned to Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Credit Analyst</fullName>
                </value>
                <value>
                    <fullName>FO</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Difference__c</fullName>
        <formula>Required_Base__c  -  Actual_Base__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Percentage__c</fullName>
        <description>Required Base Percentage for a condition based on the agreement</description>
        <inlineHelpText>Required Base Percentage for a condition based on the agreement</inlineHelpText>
        <label>Base Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Threshold_Actual_Level__c</fullName>
        <label>Base Threshold Actual Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cashflow</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <label>Clause</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition_No__c</fullName>
        <displayFormat>C-{000000}</displayFormat>
        <label>Condition No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Condition_Parties__c</fullName>
        <label># Condition Parties</label>
        <summaryForeignKey>Condition_Party__c.Condition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Condition_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Template</label>
        <referenceTo>Condition_Template__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Counter Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conditions (Relationship)</relationshipLabel>
        <relationshipName>Conditions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Relative Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Effective Date</fullName>
                </value>
                <value>
                    <fullName>Signature Date</fullName>
                </value>
                <value>
                    <fullName>Financial Year End</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days Before</fullName>
                </value>
                <value>
                    <fullName>Days After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <formula>Matter__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Expiry_Date__c</fullName>
        <label>Document Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Agreement__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <inlineHelpText>Specified in the contract</inlineHelpText>
        <label>Expected Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Forced_Update__c</fullName>
        <label>Forced Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Governance_Checks__c</fullName>
        <label>Internal Governance Checks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BBBEE Certificates</fullName>
                </value>
                <value>
                    <fullName>CASA Printouts</fullName>
                </value>
                <value>
                    <fullName>Conflict Clearance</fullName>
                </value>
                <value>
                    <fullName>Credit Approval</fullName>
                </value>
                <value>
                    <fullName>EDD / Client Profile Forms</fullName>
                </value>
                <value>
                    <fullName>Environmental Clearance</fullName>
                </value>
                <value>
                    <fullName>Excon Approval</fullName>
                </value>
                <value>
                    <fullName>FATCA Clearance</fullName>
                </value>
                <value>
                    <fullName>Fee Checklist</fullName>
                </value>
                <value>
                    <fullName>Know Your Client</fullName>
                </value>
                <value>
                    <fullName>Legal Review Checklist</fullName>
                </value>
                <value>
                    <fullName>Marked Up Term Sheet</fullName>
                </value>
                <value>
                    <fullName>Pricing/JLOC Approval</fullName>
                </value>
                <value>
                    <fullName>Product Sanction</fullName>
                </value>
                <value>
                    <fullName>STR Approval</fullName>
                </value>
                <value>
                    <fullName>TWC Risk Approval</fullName>
                </value>
                <value>
                    <fullName>TRC Approval</fullName>
                </value>
                <value>
                    <fullName>Conflict of Interest Check</fullName>
                    <isActive>false</isActive>
                    <label>Conflict of Interest Check</label>
                </value>
                <value>
                    <fullName>Credit Check</fullName>
                    <isActive>false</isActive>
                    <label>Credit Check</label>
                </value>
                <value>
                    <fullName>KYC</fullName>
                    <isActive>false</isActive>
                    <label>KYC</label>
                </value>
                <value>
                    <fullName>NDA</fullName>
                    <isActive>false</isActive>
                    <label>NDA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Chased_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Chased By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Chased_On__c</fullName>
        <label>Last Chased On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Margin Ratchet Name</label>
        <referenceTo>Margin_Ratchet__c</referenceTo>
        <relationshipLabel>Financial Covenants</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Margin Ratchet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>MatterConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multiples__c</fullName>
        <description>Base Multiples is captured when the base field is captured</description>
        <inlineHelpText>Base Multiples is captured when the base field is captured</inlineHelpText>
        <label>Base Multiples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Relative_Date__c</fullName>
        <label>Other Relative Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready__c</fullName>
        <formula>OR
(
	AND
	(
		TEXT(Recurrence__c ) == &apos;Once Off&apos;,
		ISBLANK(Due_Date__c),
		NOT(ISBLANK(TEXT(Days__c))),
		NOT(ISBLANK(TEXT(Date__c)))
	),
	AND
	(
		TEXT(Recurrence__c ) == &apos;Once Off&apos;,
		NOT(ISBLANK(Due_Date__c)),
		ISBLANK(TEXT(Date__c))
	),
	
	AND
	(
		TEXT(Recurrence__c ) != &apos;Once Off&apos;,
			NOT(ISBLANK(Number_Of_Days__c)),
		ISBLANK(Due_Date__c),
		NOT(ISBLANK(TEXT(Days__c))),
		NOT(ISBLANK(TEXT(Date__c))),
		AND
		(
			IF
			(
				TEXT(Date__c) == &apos;Signature Date&apos; &amp;&amp; NOT(ISBLANK(Signature_Date__c)),
				true,
				IF
				(
					TEXT(Date__c) == &apos;Effective Date&apos; &amp;&amp; NOT(ISBLANK(Effective_Date__c)),
					true,
					false
				)
			)
		)
	)
)</formula>
        <label>Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once Off</fullName>
                    <default>true</default>
                    <label>Once Off</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Condition</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Condition__c.Matter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Matter__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Condition__c</referenceTo>
        <relationshipLabel>Related Condition</relationshipLabel>
        <relationshipName>Conditions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <formula>Matter__r.advpm__Primary_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Counterparty</inlineHelpText>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Base_Multiple__c</fullName>
        <label>Required Base Multiple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Number__c</fullName>
        <label>Required Base Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Percentage__c</fullName>
        <label>Required Base Percentage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Multiple_Range_From__c</fullName>
        <label>Required Base Range Multiple From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Multiple_To__c</fullName>
        <label>Required Base Range Multiple To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Number_From__c</fullName>
        <label>Required Base Range Number From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Number_To__c</fullName>
        <label>Required Base Range Number To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Percentage_From__c</fullName>
        <label>Required Base Range Percentage From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Percentage_To__c</fullName>
        <label>Required Base Range Percentage To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_From_Two__c</fullName>
        <label>Required Base Range Ratio From Two</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_From__c</fullName>
        <label>Required Base Range Ratio From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_To_Two__c</fullName>
        <label>Required Base Range Ratio To Two</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_To__c</fullName>
        <label>Required Base Range Ratio To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Ratio_From__c</fullName>
        <label>Required Base Ratio From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Ratio_To__c</fullName>
        <label>Required Base Ratio To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Ratio__c</fullName>
        <label>Required Base Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base__c</fullName>
        <label>Required Base</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_base_number_fold_from__c</fullName>
        <label>Required base number value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <formula>Agreement__r.Signature_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Calculation_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breached</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Condoned Breaches</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Condoned Breaches</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Upcoming</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold_Category__c</fullName>
        <label>Threshold Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Threshold_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ratio</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold_Comparator__c</fullName>
        <label>Threshold Comparator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Threshold_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold_Type__c</fullName>
        <label>Threshold Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Covenant_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Mgmt Covenant Diary Entries</fullName>
                </value>
                <value>
                    <fullName>Accountants Certificate</fullName>
                </value>
                <value>
                    <fullName>Agency Fee</fullName>
                </value>
                <value>
                    <fullName>Annual Credit Review</fullName>
                </value>
                <value>
                    <fullName>Annual MCEV Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Annual Operating Plan</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Budgets</fullName>
                </value>
                <value>
                    <fullName>Cashflows</fullName>
                </value>
                <value>
                    <fullName>Compliance Certificates</fullName>
                </value>
                <value>
                    <fullName>Construction Reports</fullName>
                </value>
                <value>
                    <fullName>Environmental Reports</fullName>
                </value>
                <value>
                    <fullName>Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Funding</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Securities,</fullName>
                </value>
                <value>
                    <fullName>Management Accounts</fullName>
                </value>
                <value>
                    <fullName>Models / Forecasts</fullName>
                </value>
                <value>
                    <fullName>Operating Reports</fullName>
                </value>
                <value>
                    <fullName>Valuation Reports</fullName>
                </value>
                <value>
                    <fullName>Other Reports</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field to trigger condition rescheduling.</description>
        <inlineHelpText>System field to trigger condition rescheduling.</inlineHelpText>
        <label>Update Schedule</label>
        <type>Checkbox</type>
    </fields>
    <label>Condition</label>
    <nameField>
        <label>Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <recordTypes>
        <fullName>Condition_Precedent</fullName>
        <active>true</active>
        <description>A condition precedent is an event or state of affairs that is required before something else will occur. In contract law, a condition precedent is an event which must occur, unless its non-occurrence is excused.</description>
        <label>Condition Precedent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Covenant</fullName>
        <active>true</active>
        <description>Covenants in finance most often relate to terms in a financial contracting, such as a loan document stating the limits at which the borrower can further lend.</description>
        <label>Financial Covenant</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Undertaking</fullName>
        <active>true</active>
        <description>Guaranty, promise, or stipulation that creates an obligation.</description>
        <label>General Undertaking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Governance_Check</fullName>
        <active>true</active>
        <description>Internal governance checks against a deal</description>
        <label>Governance Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Information_Undertaking</fullName>
        <active>true</active>
        <description>Guaranty, promise, or stipulation that creates an obligation.</description>
        <label>Information Undertaking</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Active_Condition_Effective_Date</fullName>
        <active>true</active>
        <description>You may only make this condition ACTIVE when a &quot;Effective Date&quot; has been provided on associated agreement.</description>
        <errorConditionFormula>AND
(
OR(Active__c, Activate_Later__c ),
ISBLANK(Effective_Date__c),
ISPICKVAL(Date__c,&quot;Effective Date&quot;)
)</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>You can only make this condition ACTIVE when a &quot;Effective Date&quot; has been provided on associated agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Active_Condition_Financial_Year_End</fullName>
        <active>true</active>
        <description>You may only make this condition ACTIVE when a &quot;Financial Year End&quot; has been provided.</description>
        <errorConditionFormula>AND
(
OR(Active__c, Activate_Later__c ),
ISBLANK( Agreement__r.Financial_Year_End_Date__c ),
ISPICKVAL(Date__c,&quot;Financial Year End&quot;)
)</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>You may only make this condition ACTIVE when a Financial Year End has been provided.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Active_Condition_Signature_Date</fullName>
        <active>true</active>
        <description>You may only make this condition ACTIVE when a &quot;Signature Date&quot; has been provided on associated agreement.</description>
        <errorConditionFormula>AND
(
OR(Active__c, Activate_Later__c ),
ISBLANK(Signature_Date__c),
ISPICKVAL(Date__c,&quot;Signature Date&quot;)
)</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>You can only make this condition ACTIVE when a &quot;Signature Date&quot; has been provided on associated agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Base_Validation_Required_Base_Ratio</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(ISPICKVAL(Threshold_Category__c, &apos;Ratio&apos;),ISPICKVAL(  Threshold_Type__c , &apos;Base&apos;)),ISBLANK(   Required_Base_Ratio_From__c))</errorConditionFormula>
        <errorDisplayField>Required_Base_Ratio_From__c</errorDisplayField>
        <errorMessage>Please capture the Required Base Ratio From</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Base_Validation_Required_Base_Ratio_To</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(ISPICKVAL(Threshold_Category__c, &apos;Ratio&apos;),ISPICKVAL(  Threshold_Type__c , &apos;Base&apos;)),ISBLANK(    Required_Base_Ratio_To__c ))</errorConditionFormula>
        <errorDisplayField>Required_Base_Ratio_To__c</errorDisplayField>
        <errorMessage>Please capture the Required Base Ratio To</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Base_Validation_Required_Multiple</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(ISPICKVAL(Threshold_Category__c, &apos;Multiple&apos;),ISPICKVAL(  Threshold_Type__c , &apos;Base&apos;)),ISBLANK(   Required_Base_Multiple__c))</errorConditionFormula>
        <errorDisplayField>Required_Base_Multiple__c</errorDisplayField>
        <errorMessage>Please capture the Required Base Multiples Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Base_Validation_Required_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(ISPICKVAL(Threshold_Category__c, &apos;Number&apos;),ISPICKVAL(  Threshold_Type__c , &apos;Base&apos;)),ISBLANK(    Required_Base_Number__c ))</errorConditionFormula>
        <errorDisplayField>Required_Base_Number__c</errorDisplayField>
        <errorMessage>Please capture the Required Base Multiples Field</errorMessage>
    </validationRules>
</CustomObject>